--- a/Kaynak_Dosyalar/Yeni klasör/index.html
+++ b/Kaynak_Dosyalar/Yeni klasör/index.html
@@ -1,1 +1,84 @@
-<!DOCTYPE html><head><style>.div {  background-color: #C4C4C4;  border-style: solid;  border-color: #black;  border-radius: 10px;  width: 850px;  margin: 20px;  margin-left:auto;  margin-right:auto;}.p{ position: relative;left:30px;}.p1{ position: relative;left:-20px;}h4{ position: relative;left:10px;}</style><title>TÜBÝTAK 4006 ÞAL</title> <link rel="shortcut icon" type="image/png" href="indir.png"/></head><body bgcolor = "#808080" ><div align="center"><img src = "indir.png" align = "center" width = 400px height = 400px /></div><div align="center"><img src = "Baslik.png" align = "center" width = 283px height = 74px /></div><div class = "div" ><table><tr><h4> Uygulamanýn adý : TÜBÝTAK 4006 ÞAL </h4> </tr><tr><h4> Uygulamanýn sürümü : 1.5.1  Beta </h4> </tr><tr><h4> Uygulamanýn çýkýþ tarihi : </h4></tr><p class ="p" > SAMETÝN GÖTÜNDEN ÇIKTI BU PROGRAM </p><tr><h4> Uygulama içeriði: </h4></tr><p class ="p" > BOK VAR BOK...</p><tr><h4> Uygulamanýnn amacý: </h4></tr><p class ="p" > Ýþsiziz abi </p><tr><h4>Emeði geçenler: </h4><p class = "p" >Ali CONTARLÝ </p><p class = "p" >Fatih Mehmet GÜMÜÞÇÜ</p><p class = "p" >Furkan BAÐ </p><p class = "p" >Gökhan PINARCI</p><p class = "p">Samet SEVÝNDÝK</p></tr><table style="width:100%"><tr><th> <img  src ="beta.png" witdh = 50px height = 50 px  > </th><th><p class = "p1" >Tübitak 4006 ÞAL isimli uygulamamýz hatalara neden olabilir ve hata verebilir  </p></th></tr></table> </div><table style="width:100%">  <tr> <th><div   > <img  src = "at.png" witdh = 250px height = 211px> </div> </th><th><div  > <img  src = "at1.png" witdh = 320px height =240px> </div> </th><th> <div > <img  src = "at2.png" witdh = 199px height =253px> </div></th> </tr></table><p align = "center" ><a href = ""   > <button  >  <img src = "indir.png"  witdh= 15 px height =15 px> Uygulamayý Ýndir</button></a> </p><body/>
+<!DOCTYPE html>
+<head>
+
+<style>
+.div {
+  background-color: #C4C4C4;
+  border-style: solid;
+  border-color: #black;
+  border-radius: 10px;
+  width: 850px;
+  margin: 20px;
+  margin-left:auto;
+  margin-right:auto;
+
+}
+.p{
+ position: relative;
+left:30px;
+}
+.p1{
+ position: relative;
+left:-20px;
+}
+h4{
+ position: relative;
+left:10px;
+}
+</style>
+
+<title>TÃœBÄ°TAK 4006 ÅžAL</title> 
+
+<link rel="shortcut icon" type="image/png" href="indir.png"/>
+
+</head>
+
+
+<body bgcolor = "#808080" >
+
+<div align="center"><img src = "indir.png" align = "center" width = 400px height = 400px /></div>
+<div align="center"><img src = "Baslik.png" align = "center" width = 283px height = 74px /></div>
+
+<div class = "div" >
+
+<table>
+<tr><h4> UygulamanÄ±n adÄ± : TÃœBÄ°TAK 4006 ÅžAL </h4> </tr>
+<tr><h4> UygulamanÄ±n sÃ¼rÃ¼mÃ¼ : 1.5.1  Beta </h4> </tr>
+
+<tr><h4> UygulamanÄ±n Ã§Ä±kÄ±ÅŸ tarihi : </h4></tr>
+<p class ="p" > </p>
+<tr><h4> Uygulama iÃ§eriÄŸi: </h4></tr>
+<p class ="p" ></p>
+<tr><h4> UygulamanÄ±nn amacÄ±: </h4></tr>
+<p class ="p" >  </p>
+<tr><h4>EmeÄŸi geÃ§enler: </h4>
+<p class = "p" >Ali CONTARLÄ° </p>
+<p class = "p" >Fatih Mehmet GÃœMÃœÅžÃ‡Ãœ</p>
+<p class = "p" >Furkan BAÄž </p>
+<p class = "p" >GÃ¶khan PINARCI</p>
+<p class = "p">Samet SEVÄ°NDÄ°K</p>
+</tr>
+<table style="width:100%">
+<tr>
+<th> <img  src ="beta.png" witdh = 50px height = 50 px  > </th>
+<th><p class = "p1" >TÃ¼bitak 4006 ÅžAL isimli uygulamamÄ±z hatalara neden olabilir ve hata verebilir  </p></th>
+</tr>
+</table>
+ </div>
+<table style="width:100%">
+  
+<tr>
+
+ <th><div   > <img  src = "at.png" witdh = 250px height = 211px> </div> </th>
+
+<th><div  > <img  src = "at1.png" witdh = 320px height =240px> </div> </th>
+
+<th> <div > <img  src = "at2.png" witdh = 199px height =253px> </div></th>
+ 
+</tr>
+
+</table>
+
+
+<p align = "center" ><a href = ""   > <button  >  <img src = "indir.png"  witdh= 15 px height =15 px> UygulamayÄ± Ä°ndir</button></a> </p>
+<body/>
