--- a/webpage/index.html
+++ b/webpage/index.html
@@ -33,9 +33,9 @@
          <tr><h4>Ekran resimleri:</h4></tr>     
     <table style="width:100%">
       <tr>
-        <th><div   > <img  src = "" witdh = 250px height = 211px> </div> </th> 
-        <th><div  > <img  src = "" witdh = 320px height =240px> </div> </th>
-        <th> <div > <img  src = "" witdh = 199px height =253px> </div></th>
+        <th><div   > <img  src = "images/screenshots/screenshot.PNG" witdh = 250px height = 211px> </div> </th> 
+        <th><div  > <img  src = "images/screenshots/screenshot1.PNG" witdh = 320px height =240px> </div> </th>
+        <th> <div > <img  src = "images/screenshots/screenshot2.PNG" witdh = 199px height =253px> </div></th>
       </tr>
     </table>
          <table style="width:100%">
