--- a/webpage/sürüm-notlari.html
+++ b/webpage/sürüm-notlari.html
@@ -12,7 +12,7 @@
         
         <div class = "div" >
             <h2 id="baslik">Sürüm Notları</h2> <hr />
-            <h4>Sürüm 1.5.1 Beta: <a href="index.html">İndirme mevcut!</a></h4>
+            <h4>Sürüm 1.5.1 Beta: <a href="../index.html">İndirme mevcut!</a></h4>
             <ul type="disc">
                 <li><p>Yazım hatası düzeltildi.</p></li>
             </ul>
